# backend/src/common/enums/context-aspect-type.enum.ts
@@ -1,0 +1,4 @@
+export enum ContextAspectType {
+  EXTERNAL = 'EXTERNAL',
+  INTERNAL = 'INTERNAL',
+}
